# py_assimilator_ng

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
assimilator/: __init__.py
assimilator/alchemy/: __init__.py
assimilator/alchemy/database/: error_wrapper.py  model_utils.py  repository.py  unit_of_work.py
assimilator/alchemy/database/specifications/: filtering_options.py  specifications.py
assimilator/alchemy/events/: outbox_relay.py
assimilator/alchemy/events/database/: repository.py
assimilator/core/database/: exceptions.py  models.py  repository.py  unit_of_work.py
assimilator/core/database/specifications/: adaptive.py  filtering_options.py  specifications.py  types.py
assimilator/core/events/: events.py  events_bus.py  exceptions.py  outbox_relay.py
assimilator/core/patterns/: context_managers.py  error_wrapper.py  lazy_command.py
assimilator/core/services/: base.py  crud.py
assimilator/core/usability/: exceptions.py  pattern_creator.py  registry.py
assimilator/internal/: __init__.py
assimilator/internal/database/: error_wrapper.py  models_utils.py  repository.py  unit_of_work.py
assimilator/internal/database/specifications/: filter_specifications.py  filtering_options.py  internal_operator.py  specifications.py
assimilator/internal/events/: events_bus.py
assimilator/kafka_/events/: events_bus.py
assimilator/mongo/: __init__.py
assimilator/mongo/database/: error_wrapper.py  models.py  repository.py  unit_of_work.py
assimilator/mongo/database/specifications/: filtering_options.py  specifications.py  utils.py
assimilator/redis_/: __init__.py
assimilator/redis_/database/: models.py  repository.py  unit_of_work.py
assimilator/redis_/events/: events_bus.py
examples/: simplest_example.py
examples/complex_database/: dependencies.py  interfaces.py  main.py  models.py
examples/fastapi_crud_example/: dependencies.py  main.py  models.py  schema.py
examples/simple_database/: dependencies.py  main.py
examples/simple_events/: dependencies.py  events.py  main.py
