[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
include = [
    "assimilator"
]

[project]
name = "py_assimilator"
version = "1.3.1"
authors = [
  { name="Andrey Ivanov", email="python.on.papyrus@gmail.com" },
]
maintainers = [
  { name="Andrey Ivanov", email="python.on.papyrus@gmail.com" },
]
keywords = ["DDD", "Domain-driven design", "Database", "Events", "Architecture", "Patterns", "Backend"]
description = "The best Domain-driven design patterns for your projects"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Database",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic >=1.6.2,<2.0.0",
]

[project.optional-dependencies]
alchemy = [
    'SQLAlchemy>=2.0.0'
]
kafka = [
    'kafka-python>=2.0.2'
]
redis = [
    'redis>=4.4.0'
]
mongo = [
    'pymongo>=4.3.3'
]

[project.urls]
'Documentation' = 'https://knucklesuganda.github.io/py_assimilator/'
'Github' = 'https://github.com/knucklesuganda/py_assimilator/'
'Youtube RU' = 'https://www.youtube.com/channel/UCSNpJHMOU7FqjD4Ttux0uuw'
'Youtube ENG' = 'https://www.youtube.com/channel/UCeC9LNDwRP9OfjyOFHaSikA'

[dependency-groups]
dev = [
    "black>=24.8.0",
]

[tool.black]
target-version = ['py310','py311','py312','py313']
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py310"
include = ["pyproject.toml", "assimilator/**/*.py", "examples/**/*.py", "tests/**/*.py"]

[tool.basedpyright]
include = ["assimilator"]
defineConstant = { DEBUG = true }
pythonVersion = "3.8"
pythonPlatform = "Linux"
venvPath = ".venv"
executionEnvironments = [
  { root = "assimilator" },
  { root = "examples" }
]
### report settings ###
reportMissingImports = "error"
reportMissingTypeStubs = false
reportImplicitOverride="none"
